<resources>
    <string name="app_name">SpotifyFrontEndClone</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="premium">Premium</string>
    <string name="your_library">Your Library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_and_conditions_apply">Terms and conditions apply.</string>
    <string name="limited_time_offer">Limited Time Offer</string>
    <string name="why_join_premium">Why join Premium?</string>
    <string name="current_plan">Current Plan</string>
    <string name="pick_your_premium">Pick your Premium</string>
    <string name="for_3_months">For 3 months</string>
    <string name="free">Free</string>
    <string name="premium_individual">Premium Individual</string>
    <string name="premium_card_maketing_description">Ad-free music listening • Download to listen offline • Unlimited skips • On-demand playback • Cancel anytime</string>
    <string name="spotify_free">Spotify Free</string>
    <string name="search_profile_image">Search Profile Image</string>
    <string name="LibraryImageDescription">Library Playlist and Podcast Content\'s Image</string>
    <string name="sort_by">Sort by</string>
    <string name="most_recent">Most recent</string>
    <string name="recently_played">Recently played</string>
    <string name="check_marks_for_selected_one">Check marks for selected one</string>
    <string name="recently_added">Recently added</string>
    <string name="creator">Creator</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="cancle">cancle</string>
    <string name="addPlaylistTitle">Give your playlist a name.</string>
    <string name="back_image_works_as_button">Back Image Works as Button</string>
    <string name="search_your_library">Search Your Library</string>
    <string name="image_for_profile_visibility">Image for profile visibility</string>
</resources>