<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".fragments.PremiumFragment">

    <!-- TODO: Update blank fragment layout -->


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="75dp"

            >

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarPremium"
                android:layout_width="match_parent"
                android:layout_height="385dp"
                android:background="@color/transparent_primary"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:foreground="@drawable/dark_image_overlay"
                        android:scaleType="centerCrop"
                        android:src="@drawable/spotify_premium_image" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="48dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_spotify_selected"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:fontFamily="@font/nunito_extra_bold"
                                android:gravity="center"
                                android:text="@string/premium"
                                android:textColor="@color/white"
                                android:textSize="15sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/cardviewPremiumLimitedCard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/premium_offer_card_background"
                            android:orientation="horizontal"
                            app:layout_constraintBottom_toTopOf="@+id/tvPremiumImageFreeContent"
                            app:layout_constraintLeft_toLeftOf="parent">

                            <ImageView
                                android:layout_width="10dp"
                                android:layout_height="10dp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_circle"
                                app:tint="@color/blue" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="3dp"
                                android:fontFamily="@font/gothammedium"
                                android:letterSpacing="-0.05"
                                android:text="@string/limited_time_offer"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="11sp" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvPremiumImageFreeContent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="8dp"
                            android:fontFamily="@font/gothammedium1"
                            android:letterSpacing="-0.05"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </RelativeLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <Button
                android:id="@+id/btnGetFree"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/premium_button_background"
                android:fontFamily="@font/gothammedium"
                android:letterSpacing="-0.03"
                android:textColor="@color/primary"
                android:textSize="14sp"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appBarPremium" />

            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnGetFree" />

            <LinearLayout
                android:id="@+id/linearlayoutWhyPremiumCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/default_card_background"
                android:orientation="vertical"
                android:padding="16dp"
                android:paddingBottom="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTerms">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/gotham_bold"
                    android:text="@string/why_join_premium"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginVertical="10dp"
                    android:background="@color/transparent_grey" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvWhyPremiumList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/relativelayoutCurrentPlanCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/default_card_background"
                android:orientation="horizontal"
                android:paddingHorizontal="30dp"
                android:paddingVertical="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearlayoutWhyPremiumCard">

                <TextView
                    android:id="@+id/tvCurrentPlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/gotham_bold"
                    android:text="@string/spotify_free"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/source_sans_semibold"
                    android:gravity="end"
                    android:text="@string/current_plan"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />


            </RelativeLayout>

            <TextView
                android:id="@+id/tvPickPremium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/nunito_extra_bold"
                android:text="@string/pick_your_premium"
                android:textColor="@color/white"
                android:textSize="18sp"


                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/relativelayoutCurrentPlanCard" />


            <LinearLayout
                android:id="@+id/linearlayoutPickPremiumCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/card_background_gradient_green"
                android:orientation="vertical"
                android:paddingHorizontal="32dp"

                android:paddingTop="32dp"
                android:paddingBottom="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPickPremium"

                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:fontFamily="@font/source_sans_semibold"
                        android:text="@string/premium_individual"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:fontFamily="@font/gotham_black"
                            android:text="@string/free"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gotham_bold"
                            android:text="@string/for_3_months"
                            android:textColor="@color/lightwhite"
                            android:textSize="12sp" />

                    </LinearLayout>


                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/source_sans_semibold"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:text="@string/premium_card_maketing_description"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnGetFree2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="64dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/premium_button_background"
                    android:fontFamily="@font/gothammedium"
                    android:letterSpacing="-0.03"
                    android:textColor="@color/primary"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tvTerms2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textColor="@color/lightwhite"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>